--- a/mini_twitter/users/templates/users/user_list.html
+++ b/mini_twitter/users/templates/users/user_list.html
@@ -40,8 +40,8 @@
                     <a href="{% url 'comment_list_for_user' user.id %}" class="btn btn-info">
                         Переглянути список коментарів
                     </a>
-                    <a href="{% url 'user_info' user.id %}" class="btn btn-secondary">
-                        Переглянути інформацію
+                    <a href="{% url 'users:user_list' %}" class="btn btn-secondary">
+                        Переглянути user_list
                     </a>
                 </div>
             </div>
