--- a/mini_twitter/posts/templates/posts/post_list.html
+++ b/mini_twitter/posts/templates/posts/post_list.html
@@ -30,10 +30,11 @@
 </head>
 <body>
     <h1>Список постів</h1>
+
     <ul>
         {% for post in posts %}
             <li>
-                <p class="large-text"><strong>Автор поста:</strong> {{ post.user.user_name }}</p>
+                <p class="large-text"><strong>Автор поста:</strong> {{ post.user.username }}</p>
                 <p class="large-text"><strong>Заголовок:</strong> {{ post.title }}</p>
                 {{ post.content }}<br>
                 <!-- Посилання на сторінку перегляду коментарів для цього поста -->
@@ -41,7 +42,7 @@
                 <!-- Посилання на сторінку перегляду цього конкретного поста -->
                 <a href="{% url 'post_view' post_id=post.id %}" class="btn">Переглянути пост</a>
                 <!-- Посилання на сторінку додавання коментаря для цього поста -->
-                <a href="{% url 'add_comment_form' %}" class="btn btn-secondary rounded-pill-custom mb-3">Додати коментар до постів</a>
+                <a href="{% url 'post_view' post_id=post.id %}" class="btn btn-secondary rounded-pill-custom mb-3">Додати коментар до постів</a>
 
             </li>
         {% endfor %}
